added some functionality, CORS needs correcting

--- a/index.html
+++ b/index.html
@@ -26,12 +26,23 @@
 
 
             <div class="inputSection">
-                <p class="instructions">How much does your favorite website contribute to global greenhouse emissions per page load?<br>Find out by entering the URL below.</p>
-                <input type="" id="url" name="url" class="input" placeholder="https://www.example.com"/>
+                <p class="instructions">How much does your favorite website contribute to global greenhouse emissions per page load?
+                    <br>Find out by entering the URL below.</p>
+                <input type="" id="url" name="url" class="input" placeholder="example.com"/>
             </div>
+
+            
             <button id="fetch">Check Footprint</button>
 
+
+
+            <p class="output" id="output-grams"></p>
+
+
+            <button id="reset">Reset</button>
+
                 
+
           </div>
 
 
