--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="inputSection">
                 <p class="instructions">How much does your favorite website contribute to global greenhouse emissions per page load?
-                    <br>Find out by entering the URL below.</p>
+                    <br><br>Find out by entering a URL below:</p>
                 <input type="" id="url" name="url" class="input" placeholder="example.com"/>
             </div>
 
